# uibeam

./: Cargo.toml  LICENSE  README.md  memo.md
.github/workflows/: AutoApprove.yml  CI.yml  PublishCrates.yml  PublishSupport.yml  auto-approve.yml  publish-crates.yml  publish-vscode.yml
examples/: Cargo.toml
examples/children/: Cargo.toml  expected.html
examples/children/src/: main.rs
examples/counter/: Cargo.toml  build.rs  log.stderr  test.sh
examples/counter/components/: Cargo.toml  expected.pretty.html
examples/counter/components/src/: lib.rs
examples/counter/src/: main.rs
examples/hello_world/: Cargo.toml  expected.html
examples/hello_world/src/: main.rs
examples/script/: Cargo.toml  expected.html.txt
examples/script/src/: main.rs
examples/script_tag/: Cargo.toml  expected.html.txt
examples/script_tag/src/: main.rs  module.js
examples/tailwind/: .gitignore  Cargo.toml  tailwind.config.js
examples/tailwind/src/: main.rs
examples/tailwind/src/pages/: index.rs  mod.rs
sandbox/: Cargo.toml  index.html
sandbox/examples/: children.rs  hello_world.rs  ui_macro.rs
support/vscode/: README.md  package-lock.json  package.json  tsconfig.json
support/vscode/src/: lib.test.ts  lib.ts
support/vscode/tests/: lib.test.ts
uibeam/: Cargo.toml  runtime.mjs
uibeam-vscode/: .gitignore  README.md  package-lock.json  package.json
uibeam-vscode/src/: auto_insertion.ts  extension.ts  find_ui.test.ts  find_ui.ts  lib.test.ts  lib.ts  util.ts
uibeam/runtime/: README.md  bundle.sh  jsconfig.json  runtime.js
uibeam/src/: client.rs  hydrate.js  integration.rs  integrations.rs  island.rs  laser.rs  lib.rs
uibeam/src/island/: preact.rs
uibeam/src/laser/: preact.rs
uibeam_html/: Cargo.toml
uibeam_html/src/: lib.rs
uibeam_macro/: Cargo.toml
uibeam_macro/src/: lib.rs
uibeam_macro/src/ui/: mod.rs  parse.rs  transform.rs
uibeam_macros/: Cargo.toml
uibeam_macros/src/: lib.rs
uibeam_macros/src/client/: mod.rs
uibeam_macros/src/island/: mod.rs
uibeam_macros/src/laser/: mod.rs  parse.rs
uibeam_macros/src/ui/: mod.rs  parse.rs  transform.rs
uibeam_macros/src/ui/transform/: browser.rs  client.rs  hydrate.rs  native.rs  server.rs  wasm32.rs
