[workspace]
resolver = "3"
members  = ["uibeam", "uibeam_html", "uibeam_macros"]

[workspace.package]
version    = "0.3.1"
edition    = "2024"
authors    = ["kanarus <kanarus786@gmail.com>"]
homepage   = "https://crates.io/uibeam"
repository = "https://github.com/ohkami-rs/uibeam"
readme     = "README.md"
license    = "MIT"
keywords   = ["jsx", "html", "template-engine", "web", "ui"]
categories = ["template-engine", "web-programming", "wasm"]

[workspace.lints.clippy]
duplicated_attributes = "allow" # to keep readability with complex feature combinations

[workspace.metadata.tasks]
CI = """
cargo metask check test
"""

check = """
cargo metask check_fmt check_clippy
"""
check_fmt = """
cargo fmt --all --check
"""
check_clippy = """
cargo clippy --all-targets --all-features -- --deny warnings
"""

test = """
cargo metask test_crates test_examples
"""
test_crates = """
    cd uibeam
    echo "================[doc]================\n"
    cargo test --doc --all-features
    echo "================[vanilla]================\n"
    cargo test --lib
    echo "================[laser]================\n"
    cargo test --lib --features laser
    echo "================[integrations]================\n"
    for integration in $(cargo info --color never uibeam | awk '/\\[.*__integration__.*\\]/ {print $1}'); do
        if [ "$integration" != "openapi" ]; then
            echo "================[integration:$integration]================\n"
            cargo test --lib --features "$integration"
            cargo test --lib --features "$integration",openapi
            cargo test --lib --features "$integration",laser
            cargo test --lib --features "$integration",laser,openapi
        fi
    done
"""
test_examples = """
    cd examples
    for directory in ./*/; do
        if [ "$(basename $directory)" != "target" ]; then
            echo "================[example:$(basename $directory)]================\n"
            cd "$directory"
            cargo test
            cd ..
        fi
    done
"""
