[package]
name          = "uibeam"
documentation = "https://docs.rs/uibeam"
description   = "A lightweight, JSX-style HTML template engine for Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
__integration__ = []
axum      = ["__integration__", "dep:axum"]
actix-web = ["__integration__", "dep:actix-web"]

[dependencies]
uibeam_html   = { path = "../uibeam_html",   version = "=0.2.1" }
uibeam_macros = { path = "../uibeam_macros", version = "=0.2.1" }

[dependencies.axum]
optional         = true
default-features = false
version          = "0.8.4"

[dependencies.actix-web]
optional         = true
default-features = false
version          = "4.11.0"
