[package]
name          = "uibeam"
documentation = "https://docs.rs/uibeam"
description   = "A lightweight, JSX-style HTML template engine for Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
laser = ["uibeam_macros/laser", "dep:serde", "dep:serde_json", "dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
__integration__ = ["dep:http", "dep:mime"]
axum      = ["__integration__", "dep:axum-core"]
actix-web = ["__integration__", "dep:actix-web"]

[dependencies]
uibeam_html   = { path = "../uibeam_html",   version = "=0.2.2" }
uibeam_macros = { path = "../uibeam_macros", version = "=0.2.2" }

# for islands
serde        = { optional = true, version = "1.0" }
serde_json   = { optional = true, version = "1.0" }
wasm-bindgen = { optional = true, version = "0.2" }
js-sys       = { optional = true, version = "0.3" }
web-sys      = { optional = true, version = "0.3", features = [
    "console", "Window", "Document", "Element", "Text",
    "AnimationEvent", "CompositionEvent", "FocusEvent", "InputEvent", "KeyboardEvent",
    "MouseEvent", "PointerEvent", "TouchEvent", "TransitionEvent", "UiEvent", "WheelEvent",
] }

# for integrations
http = { optional = true, version = "1.3.1" }
mime = { optional = true, version = "0.3.17" }

[dependencies.axum-core]
optional         = true
default-features = false
version          = "0.5.2"

[dependencies.actix-web]
optional         = true
default-features = false
version          = "4.11.0"

[dev-dependencies]
tokio     = { version = "1.45.0", features = ["rt-multi-thread", "net", "macros"] }
axum      = { version = "0.8.4" }
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
# [2025-05-19] build fails without `default-features = false`
