[package]
name          = "uibeam_html"
documentation = "https://docs.rs/uibeam_html"
description   = "HTML implementation for UI Beam - A component-based, in-code template engine for Web UI in Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[dependencies]
