[package]
name          = "uibeam_html"
documentation = "https://docs.rs/uibeam_html"
description   = "shared HTML library for UIBeam - A lightweight, JSX-style HTML template engine for Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
