[package]
name          = "uibeam_macro"
version       = "0.1.0"
edition       = "2024"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/uibeam_macro"
homepage      = "https://crates.io/crates/uibeam_macro"
repository    = "https://github.com/kanarus/uibeam"
readme        = "README.md"
license       = "MIT"
description   = ""
keywords      = []
categories    = []

[dependencies]
