[package]
name          = "uibeam_macro"
documentation = "https://docs.rs/uibeam_macro"
description   = "proc macro for UI Beam - A component-based, in-code template engine for Web UI in Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[lib]
proc-macro = true

[dependencies]
uibeam_html = { workspace = true }
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full"] }
