[package]
name          = "uibeam_macros"
documentation = "https://docs.rs/uibeam_macro"
description   = "proc macros for UIBeam - A lightweight, JSX-style HTML template engine for Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[lib]
proc-macro = true

[features]
laser = []

[dependencies]
uibeam_html = { path = "../uibeam_html", version = "=0.2.2" }
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full"] }
