[package]
name          = "uibeam_macros"
documentation = "https://docs.rs/uibeam_macro"
description   = "proc macros for UIBeam - A lightweight, JSX-style Web UI library for Rust"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
license       = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
proc-macro = true

[features]
client = []

[dependencies]
uibeam_html = { path = "../uibeam_html", version = "=0.4.0" }
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full"] }
