[workspace]
resolver = "3"
members  = [".", "components"]

[workspace.dependencies]
uibeam = { path = "../../uibeam" }
serde  = { version = "1", features = ["derive"] }

[workspace.metadata.tasks]
build-dev = """
    [ -d components/pkg ] && rm -rf components/pkg || :
    wasm-pack build components --target web --out-name lasers --dev
    tailwindcss -c tailwind.config.js -o components/pkg/tailwind.css
    cargo build
"""
build-release = """
    [ -d components/pkg ] && rm -rf components/pkg || :
    wasm-pack build components --target web --out-name lasers # default is release
    tailwindcss -c tailwind.config.js -o components/pkg/tailwind.css
    cargo build --release
"""

[package]
name    = "counter"
version = "0.0.0"
edition = "2024"

[dependencies]
components = { path = "./components" }
uibeam = { workspace = true }
serde  = { workspace = true }
ohkami = { version = "0.24", features = ["rt_smol"] }
smol   = { version = "2" }
