[workspace]
resolver = "3"
members  = [".", "components"]

[workspace.dependencies]
uibeam = { path = "../../uibeam", features = ["ohkami"] }
serde  = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(hydrate)"] }

[lints]
workspace = true

[package]
name    = "counter"
version = "0.0.0"
edition = "2024"

[dependencies]
components = { path = "./components" }
uibeam = { workspace = true }
serde  = { workspace = true }
ohkami = { version = "0.24", features = ["rt_smol"] }
smol   = { version = "2" }
